@@ -1,3 +1,9 @@
+2009-01-26  Jens Granseuer  <jensgr@gmx.net>
+
+	* xrandr-capplet.c: (rebuild_rate_combo),
+	(rebuild_resolution_combo): don't crash if we don't have an output
+	(bug #569218)
+
 2008-12-18  Federico Mena Quintero  <federico@novell.com>
 
 	* xrandr-capplet.c (get_output_for_window): Include "off" outputs
